Greatly enhance HelloWorld.neo and make it compile and run Add neo.lang.Closure and neo.lang.Context Make basic multimethods work Add N.capatilize(), each(), eachIndex(), eachWithIndex() and join() Improve other neo.lang.N and neo.os.N multimethods Add ClassDef, FieldDef, MethodDef and MemberDef Add Compiler prepare phase and a validation/refine phase Make imports work better Add Percent CorePlugin for word arrays Fix rendering bugs Add closure syntax